--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -1,4 +1,4 @@
-header.header
+header.header.header-top
     .container
         .header-wrapper
             .header-logo
@@ -38,3 +38,4 @@ header.header
                 span Меню
                 span.menu-burger_wrapper
                     .menu-burger-icon
+    .header-bottom
