--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ block header
     include html/header
 block content
 
-    include html/inc/front-page
+    include html/inc/hero
 
 block footer
     include html/footer
