--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -94,6 +94,7 @@
             border: 1px solid #BBCC68;
             padding: 18px 25px;
             white-space: nowrap;
+            text-decoration: none;
         }
     }
 }
